<resources>
    <string name="app_name">qualwebs_chatapp_assignment</string>
    <string name="sign_in">Sign in</string>
    <string name="signup">Sign Up</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="enter_email_or_mobile_number">Enter Email or Mobile number</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full name</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile number</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_and_account">Don\'t have and account ?</string>
    <string name="profile">Profile</string>
    <string name="hey_there_i_m_using_qualwebs_chatapp">Hey there, I\'m using Qualwebs chatapp</string>
    <string name="change_password">Change Password</string>
    <string name="update_settings">Update Settings</string>
    <string name="chats">Chats</string>
    <string name="new_message">New message</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="search_user">Search User</string>
    <string name="log_out">Log out</string>

</resources>