<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/edittext_bg">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_user"
        android:textSize="18sp"
        android:fontFamily="@font/sorabold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/etUserInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_or_phone"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/etUserInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSearch"
        android:layout_marginTop="10dp"/>



    <Button
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginStart="5dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/etUserInput"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
