<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="viewmodel"
            type="com.example.qualwebs_chatapp_assignment.viewmodel.SignInAndSignUpViewmodel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">






<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:paddingBottom="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpScreen">





    <TextView
        android:id="@+id/SignuptextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sorabold"
        android:layout_marginStart="30dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/soraregular"
        android:layout_marginTop="10dp"
        android:text="@string/create_your_account"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/SignuptextView"
        app:layout_constraintStart_toStartOf="@id/SignuptextView"
         />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/add_profile_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profilesvg"
        app:civ_border_width="4dp"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/nameEditTxt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textCursorDrawable="@null"
        android:background="@drawable/edittext_bg"
        android:hint="@string/full_name"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:inputType="text"
        android:paddingEnd="50dp"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/add_profile_img" />


    <EditText
        android:id="@+id/email_signup_edittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textCursorDrawable="@null"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="50dp"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/nameEditTxt"
        app:layout_constraintStart_toStartOf="@+id/nameEditTxt"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTxt" />

    <EditText
        android:id="@+id/number_signup_edittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/mobile_number"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textCursorDrawable="@null"
        android:paddingEnd="50dp"
        android:inputType="number"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email_signup_edittext"
        app:layout_constraintTop_toBottomOf="@+id/email_signup_edittext" />


    <EditText
        android:id="@+id/password_signup_edittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_password"
        android:paddingStart="10dp"
        android:textCursorDrawable="@null"
        android:paddingTop="10dp"
        android:paddingEnd="50dp"
        android:paddingBottom="10dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/number_signup_edittext"
        app:layout_constraintTop_toBottomOf="@+id/number_signup_edittext" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/confirm_pass_signup_edittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/confirm_password"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textCursorDrawable="@null"
        android:paddingEnd="50dp"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password_signup_edittext"
        app:layout_constraintTop_toBottomOf="@+id/password_signup_edittext" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        android:text="@string/signup"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sorasemibold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/confirm_pass_signup_edittext"
        app:layout_constraintStart_toStartOf="@+id/confirm_pass_signup_edittext"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass_signup_edittext" />

    <TextView
        android:id="@+id/staticTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/soraregular"
        android:text="@string/already_have_an_account"
        android:textColor="@color/grey"
        android:layout_marginEnd="50dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/soramedium"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="italic"
        android:onClick="@{viewmodel:: onSignInTxtClicked}"
        app:layout_constraintBottom_toBottomOf="@+id/staticTxt"
        app:layout_constraintStart_toEndOf="@+id/staticTxt"
        app:layout_constraintTop_toTopOf="@+id/staticTxt" />






</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
