<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewmodel"
            type="com.example.qualwebs_chatapp_assignment.viewmodel.ProfileScreenViewModel" />

        <variable
            name="sharepref"
            type="com.example.qualwebs_chatapp_assignment.data.PreferenceHelper" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_arrow"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sorabold"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profiledummysvg"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="10dp"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dummy Text "
        android:textSize="24sp"
        android:fontFamily="@font/sorabold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_pic"
        app:layout_constraintStart_toStartOf="@+id/profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_there_i_m_using_qualwebs_chatapp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintEnd_toEndOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:layout_marginTop="5dp"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_constraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status">

        <TextView
            android:id="@+id/em_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/email_id"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/soraregular"
            android:text="dummyemail@gmail.com"
            android:textColor="@color/black"
            android:padding="3dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/em_static"


            app:layout_constraintTop_toBottomOf="@id/em_static" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phone_constraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_constraint">

        <TextView
            android:id="@+id/phone_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mobile_number"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/soraregular"
            android:text="9014636901"
            android:textColor="@color/black"
            android:padding="3dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/phone_static"


            app:layout_constraintTop_toBottomOf="@id/phone_static" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_password_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        android:fontFamily="@font/sorasemibold"
        android:padding="3dp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_margin="30dp"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_constraint" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_btn"
        android:fontFamily="@font/sorasemibold"
        android:padding="3dp"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/change_password_btn"
        app:layout_constraintStart_toStartOf="@+id/change_password_btn"
        app:layout_constraintTop_toBottomOf="@+id/change_password_btn" />




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
